--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
 		"helmet": "^8.1.0",
+		"mongoose": "^8.14.2",
 		"openai": "^4.96.2"
 	},
 	"devDependencies": {
